--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,16 @@ dependencies {
     testImplementation 'org.mockito:mockito-inline:3.6.0'
 }
 
-tasks.named('test') {
-    useJUnitPlatform()
-}
+//NOTE: 테스트 수행 시, dirty 태그가 붙은 테스트는 제외
+//tasks.named('test') {
+//    useJUnitPlatform {
+//        excludeTags 'dirty'
+//    }
+//}
+
+//NOTE: gradle cleanTest 명령을 통해 clean 태그가 붙은 테스트만 수행
+//task cleanTest(type: Test) {
+//    useJUnitPlatform {
+//        includeTags 'clean'
+//    }
+//}
